--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:theme="@style/AppTheme.FullScreen"/>
-
+        <activity android:name=".activities.DetailsFood"></activity>
+        <activity android:name=".activities.OrderFoodActivity" />
+        <activity android:name=".activities.DashboardActivity" />
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".activities.LanguageActivity"
+            android:theme="@style/AppTheme.FullScreen" />
+        <activity
+            android:name=".activities.SplashScreenActivity"
             android:theme="@style/AppTheme.FullScreen">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
