--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.DetailsFood"></activity>
+        <activity android:name=".activities.RestaurantOrderFood"></activity>
+        <activity android:name=".activities.DetailsFood" />
         <activity android:name=".activities.OrderFoodActivity" />
         <activity android:name=".activities.DashboardActivity" />
         <activity
